--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   google_maps_flutter: ^1.2.0
   geolocator: ^5.1.3
   outline_material_icons: ^0.1.1
+  http: ^0.12.2
+  provider: ^4.3.3
+  sprintf: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
