--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.3
   sprintf: ^5.0.0
+  flutter_polyline_points: ^0.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
